--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <div class="banner-container">
     <div class="banner-content">
         <h1>Explore Your Travel</h1>
-        <p class="para-banner">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis ea vero impedit dolorem aliquid officia quidem enim fugit quae, odit cupiditate, dicta aut necessitatibus saepe id ipsam iure autem asperiores.</p>
+        <p class="para-banner">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis ea vero impedit dolorem aliquid officia quidem enim fugit quae, odit cupiditate, dicta aut necessitatibus saepe.</p>
     </div>
     <div class="banner-input">
         <div>
