--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                 <option value="">Select</option>
             </select>
         </div>
-        <div>
-            <button id="find">Find now</button>
+        <div class="twin">
+            <button id="find"><img src="Images/search.svg" alt="">Find now</button>
         </div>
     </div>
 </div>
