--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <div class="banner-container">
     <div class="banner-content">
         <h1>Explore Your Travel</h1>
-        <p class="para-banner">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis ea vero impedit dolorem aliquid officia quidem enim fugit quae, odit cupiditate, dicta aut necessitatibus saepe.</p>
+        <p class="para-banner">As a reputed online holiday companies, we’ve been giving holiday power to the people for over 20 years. And we don't plan on stopping any time soon. Use our website to plan an amazing trip</p>
     </div>
     <div class="banner-input">
         <div>
@@ -47,7 +47,7 @@
             </select>
         </div>
         <div class="twin">
-            <button id="find"><img src="Images/search.svg" alt="">Find now</button>
+            <button id="find"><img id="white" src="Images/magnifying-glass-solid.svg" alt="">Find now</button>
         </div>
     </div>
 </div>
@@ -72,7 +72,7 @@
         <section>
             <div class="gallary-info">
                 <h1>Choose Your Destination</h1>
-                <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque</p>
+                <p>Use our website to go anywhere you want with an ease.it is completely hassle free and cheap</p>
             </div>
             <div class="gallary-container">
                 <div class="grid-img-1">
@@ -105,7 +105,7 @@
         <section>
             <div class="service-container">
                 <h1>Why Choose Us</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci asperiores animi ipsa iusto maiores facere esse numquam obcaecati rerum dignissimos atque excepturi, saepe ipsam quia? Iste alias architecto sed doloribus.</p>
+                <p>Use our website to go anywhere you want with an ease.it is completely hassle free and cheap. You wont find better deals, customer service better than us</p>
             </div>
             <div class="service-card-container">
                 <div class="box-one">
@@ -127,6 +127,35 @@
                     </div>
                 </div>
         </section>
+
+        <section>
+            <div class="hotel-info-container">
+                <h1 id="hotel-title">Hotel Available</h1>
+            <p id="hotel-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore iste assumenda ab maiores suscipit, in illo at error perspiciatis quia exercitationem amet quo .</p>
+            </div>
+            <div class="hotel-container">
+ <div>
+    <img id="hotel-img" src="images/hotel2.jpg" alt="">
+    <h1>France</h1>
+    <p>$200 Per Night</p>
+    <p>Breakfast free and High security</p>
+ </div>
+ <div>
+    <img id="hotel-img" src="images/hotel3.jpg" alt="">
+    <h1>Bali</h1>
+    <p>$500 Per Night</p>
+    <p>Breakfast free and High security</p>
+ </div>
+ <div>
+    <img id="hotel-img" src="images/hotel4.jpg" alt="">
+    <h1>London</h1>
+    <p>$300 Per Night</p>
+    <p>Breakfast free and High security</p>
+ </div>
+            </div>
+        </section>
+
+
 
         <section class="news-container">
             <div class="news-info">
@@ -153,7 +182,7 @@
         <footer>
             <div class="footer-title">
                 <img id="hero-img" src="Images/Group 40071 (2).png" alt="">
-                <h1 id="hero-travel">Hero <span id="orange-title">travel</span></h1>
+                <h1 id="hero-travel">Happy <span id="orange-title">Trip</span></h1>
             </div>
             <div>
                 <p id="footer-para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati reprehenderit aut esse dicta porro quasi culpa aperiam quaerat assumenda sequi laborum atque ullam deserunt, blanditiis commodi architecto pariatur labore eveniet.</p>
