--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <div class="banner-container">
     <div class="banner-content">
         <h1>Explore Your Travel</h1>
-        <p class="para-banner">As a reputed online holiday companies, we’ve been giving holiday power to the people for over 20 years. And we don't plan on stopping any time soon. Use our website to plan an amazing trip</p>
+        <p class="para-banner">As a reputed online holiday companies, we’ve been giving holiday power to the people for over 20 years. And we don't plan on stopping any time soon.</p>
     </div>
     <div class="banner-input">
         <div>
@@ -56,13 +56,13 @@
         <div class="tour-container">
             <div>
                 <h1>Our Popular Tours</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos natus ex iure maiores in eos saepe fugiat, sint a veritatis illum libero similique eaque atque autem quaerat est odio eum?</p>
+                <p>Book a tour with us and travel the world safely at a very discounted rate. We provide an extensive guide of famous cities around the world</p>
                 <ul>
-                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, a. In, eaque repudiandae. Dolore obcaecati ipsum perferendis ratione dolorum facere corrupti iste molestiae veritatis, quae doloremque minima vero eum exercitationem?</li>
-                    <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit reprehenderit eius tempore vero. Maiores accusamus enim corporis autem eum, deleniti pariatur veniam, perferendis unde ratione nobis? Itaque eum vel recusandae!</li>
-                    <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum dolore laborum ea quisquam autem. Autem aliquam inventore, unde, itaque nisi hic assumenda similique accusantium ratione, eum sit deleniti modi magni.</li>
-                </ul>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus, dignissimos! Ut, animi dolores dolore labore quae earum. Autem libero, accusamus soluta perferendis neque, ipsum illo quibusdam ratione laboriosam qui magni.</p>
+                    <li>Bali is part of the Coral Triangle, the area with the highest biodiversity of marine species, especially fish and turtles. In this area alone, over 500 reef-building coral species can be found</li>
+                    <li>Since the 17th century, Paris has been one of the world's major centres of finance, diplomacy, commerce, culture, fashion, and gastronomy. In the 19th century, it became known as the City of Light.</li>
+                    <li>London is the capital and largest city of England and the United Kingdom, with a population of around 8.8 million. has been a major settlement for nearly two millennia.</li>
+                </ul> 
+                <p>Book a tour with us and travel the world safely at a very discounted rate. We provide an extensive guide of famous cities around the world</p>
                 <button>Read More</button>
             </div>
             <div>
@@ -111,19 +111,19 @@
                 <div class="box-one">
                     <img src="Images/hotel 1.svg" alt="">
                     <h1>Handpicked Hotels</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis in, molestias sed dolores ducimus reiciendis fugit. Natus mollitia, tempore incidunt consequuntur sint quibusdam consequatur! Mollitia ullam quidem pariatur aliquid voluptate!</p>
+                    <p>We offer the best hotels at a very reasonable price. You wont find a better deal than this anywhere else. all the hotels are top notch and Handpicked by us. with great food and room service.</p>
                 </div>
                 <div class="box-two">
                     <img src="Images/map 1.svg" alt="">
                     <h1>World Class Service</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio sit odit nulla, blanditiis nostrum praesentium temporibus tenetur quaerat unde amet laboriosam eum iusto. Alias incidunt tempora necessitatibus. Autem, facilis nam.</p>
+                    <p>We offer the best hotels at a very reasonable price. You wont find a better deal than this anywhere else. all the hotels are top notch and Handpicked by us. with great food and room service.</p>
                 </div>
             </div>     
                 <div class="box-below">
                     <div class="box-three">
                         <img src="Images/price-tag 1.svg" alt="">
                         <h1>Best Price Guarantee</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis amet facilis distinctio nihil, ratione, porro reiciendis vitae ut, culpa delectus magni molestias beatae minus nisi eum soluta deserunt pariatur. Officia!</p>
+                        <p>We offer the best hotels at a very reasonable price. You wont find a better deal than this anywhere else. all the hotels are top notch and Handpicked by us. with great food and room service.</p>
                     </div>
                 </div>
         </section>
@@ -131,8 +131,7 @@
         <section>
             <div class="hotel-info-container">
                 <h1 id="hotel-title">Hotel Available</h1>
-            <p id="hotel-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore iste assumenda ab maiores suscipit, in illo at error perspiciatis quia exercitationem amet quo .</p>
-            </div>
+            <p id="hotel-content">We offer the best hotels at a very reasonable price. You wont find a better deal than this anywhere else. all the hotels are top notch and Handpicked by us. with great food and room service.</p>
             <div class="hotel-container">
  <div>
     <img id="hotel-img" src="images/hotel2.jpg" alt="">
@@ -185,7 +184,7 @@
                 <h1 id="hero-travel">Happy <span id="orange-title">Trip</span></h1>
             </div>
             <div>
-                <p id="footer-para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati reprehenderit aut esse dicta porro quasi culpa aperiam quaerat assumenda sequi laborum atque ullam deserunt, blanditiis commodi architecto pariatur labore eveniet.</p>
+                <p id="footer-para">We offer the best hotels at a very reasonable price. You wont find a better deal than this anywhere else. all the hotels are top notch and Handpicked by us. with great food and room service.</p>
             </div>
             <div>
                 <img class="footer-img" src="Images/Social.svg" alt="">
