--- a/index.html
+++ b/index.html
@@ -154,7 +154,9 @@
             </div>
         </section>
 
-
+<section>
+    <img src="Images/hotel4.jpg" alt="">
+</section>
 
         <section class="news-container">
             <div class="news-info">
