--- a/index.html
+++ b/index.html
@@ -134,19 +134,19 @@
             <p id="hotel-content">We offer the best hotels at a very reasonable price. You wont find a better deal than this anywhere else. all the hotels are top notch and Handpicked by us. with great food and room service.</p>
             <div class="hotel-container">
  <div>
-    <img id="hotel-img" src="Images/hotel2.jpg" alt="">
+    <img id="hotel-img" src="hotel2.jpg" alt="">
     <h1>France</h1>
     <p>$200 Per Night</p>
     <p>Breakfast free and High security</p>
  </div>
  <div>
-    <img id="hotel-img" src="Images/hotel3.jpg" alt="">
+    <img id="hotel-img" src="hotel3.jpg" alt="">
     <h1>Bali</h1>
     <p>$500 Per Night</p>
     <p>Breakfast free and High security</p>
  </div>
  <div>
-    <img id="hotel-img" src="Images/hotel4.jpg" alt="">
+    <img id="hotel-img" src="hotel4.jpg" alt="">
     <h1>London</h1>
     <p>$300 Per Night</p>
     <p>Breakfast free and High security</p>
